Disable TrajectoryFromTrackFit to prepare for interface change

--- a/JugTrack/CMakeLists.txt
+++ b/JugTrack/CMakeLists.txt
@@ -23,7 +23,7 @@ gaudi_add_module(JugTrackPlugins
   src/components/TrackParamVertexClusterInit.cpp 
   src/components/TrackParamImagingClusterInit.cpp 
   src/components/ParticlesFromTrackFit.cpp 
-  src/components/TrajectoryFromTrackFit.cpp 
+  #src/components/TrajectoryFromTrackFit.cpp 
   src/components/TruthTrackSeeding.cpp 
   LINK
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
