--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.19)
 
 # CMP0074: find_package() uses <PackageName>_ROOT variables
 cmake_policy(SET CMP0074 NEW)
@@ -9,7 +9,12 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(EICD REQUIRED)
 find_package(NPDet REQUIRED)
-find_package(podio 0.11.0 REQUIRED)
+
+find_package(podio 0.11...0.14 REQUIRED)
+add_definitions("-Dpodio_VERSION_MAJOR=${podio_VERSION_MAJOR}")
+add_definitions("-Dpodio_VERSION_MINOR=${podio_VERSION_MINOR}")
+add_definitions("-Dpodio_VERSION_PATCH=${podio_VERSION_PATCH}")
+
 find_package(ROOT COMPONENTS Core RIO Tree MathCore GenVector Geom REQUIRED)
 find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
 find_package(Acts REQUIRED COMPONENTS Core PluginIdentification PluginTGeo PluginDD4hep PluginJson)
