--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,12 @@ add_definitions("-Dpodio_VERSION_PATCH=${podio_VERSION_PATCH}")
 
 find_package(ROOT COMPONENTS Core RIO Tree MathCore GenVector Geom REQUIRED)
 find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
+
 find_package(Acts REQUIRED COMPONENTS Core PluginIdentification PluginTGeo PluginDD4hep PluginJson)
+add_definitions("-DActs_VERSION_MAJOR=${Acts_VERSION_MAJOR}")
+add_definitions("-DActs_VERSION_MINOR=${Acts_VERSION_MINOR}")
+add_definitions("-DActs_VERSION_PATCH=${Acts_VERSION_PATCH}")
+
 find_library(genfit2 genfit2 /usr/local/lib REQUIRED)
 find_path(genfit2_INCLUDE_DIR NAMES GFGbl.h PATHS /usr/local/include ${genfit2}/../include REQUIRED)
 
