--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,7 +82,7 @@ analysis:clang-tidy:
     - juggler:local
   script:
     - |
-      run-clang-tidy -p build -j20 -export-fixes clang_tidy_fixes.yml
+      run-clang-tidy-13 -p build -j20 -export-fixes clang_tidy_fixes.yml
   artifacts:
     paths:
       - clang_tidy_fixes.yml
