--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,6 +79,7 @@ juggler:local:
       cmake -Bbuild -S.
       cmake --build build -j20
   artifacts:
+    expire_in: 1 hour
     paths:
       - build/
 
@@ -91,6 +92,7 @@ analysis:clang-tidy:
     - |
       run-clang-tidy-13 -p build -j20 -export-fixes clang_tidy_fixes.yml
   artifacts:
+    expire_in: 1 week
     paths:
       - clang_tidy_fixes.yml
 
