--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,13 @@ juggler:local:
   image: eicweb.phy.anl.gov:4567/containers/eic_container/jug_xl:nightly
   stage: build
   script:
-    ## first install EICD to ensure the latest version, then build juggler
+    ## first install NPDET and EICD to ensure the latest version, then build juggler
+    - |
+      git clone https://eicweb.phy.anl.gov/eic/npdet.git /tmp/npdet
+      cd /tmp/npdet && git checkout $JUGGLER_NPDET_VERSION && cd -
+      cmake -B /tmp/build -S /tmp/npdet -DCMAKE_INSTALL_PREFIX=/usr/local
+      cmake --build /tmp/build -j40 -- install
+      rm -rf /tmp/build /tmp/npdet
     - |
       git clone https://eicweb.phy.anl.gov/eic/eicd.git /tmp/eicd
       cd /tmp/eicd && git checkout $JUGGLER_EICD_VERSION && cd -
