--- a/JugDigi/CMakeLists.txt
+++ b/JugDigi/CMakeLists.txt
@@ -14,7 +14,7 @@ gaudi_add_module(JugDigiPlugins
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
   JugBase
   ROOT::Core ROOT::RIO ROOT::Tree
-  NPDet::DD4podIO
+  EDM4HEP::edm4hep
   EICD::eicd
 )
 
