--- a/JugPID/CMakeLists.txt
+++ b/JugPID/CMakeLists.txt
@@ -10,7 +10,7 @@ gaudi_add_module(JugPIDPlugins
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
   JugBase
   ROOT::Core ROOT::RIO ROOT::Tree
-  NPDet::DD4podIO
+  EDM4HEP::edm4hep
   EICD::eicd
 )
 
