--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -34,7 +34,7 @@ gaudi_add_module(JugRecoPlugins
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
   JugBase
   ROOT::Core ROOT::RIO ROOT::Tree
-  NPDet::DD4podIO
+  EDM4HEP::edm4hep
   EICD::eicd
   DD4hep::DDRec
 )
