JugDigi::SimTrackerHitsCollector to deal with demuxed readouts

--- a/JugDigi/CMakeLists.txt
+++ b/JugDigi/CMakeLists.txt
@@ -10,6 +10,7 @@ gaudi_add_module(JugDigiPlugins
   src/components/PhotoMultiplierDigi.cpp 
   src/components/UFSDTrackerDigi.cpp 
   src/components/SiliconTrackerDigi.cpp 
+  src/components/SimTrackerHitsCollector.cpp 
   LINK
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
   JugBase
