--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ if(ENABLE_CLANG_TIDY)
 endif()
 
 find_package(EICD REQUIRED)
-find_package(EDM4HEP REQUIRED)
+find_package(EDM4HEP 0.4.1 REQUIRED)
 
 find_package(podio 0.14.1 REQUIRED)
 add_definitions("-Dpodio_VERSION_MAJOR=${podio_VERSION_MAJOR}")
