--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,12 +67,17 @@ default:
 juggler:local:
   image: eicweb.phy.anl.gov:4567/containers/eic_container/jug_xl:nightly
   stage: build
+  parallel:
+    matrix:
+    - CMAKE_CXX_STANDARD:
+      - 17
+      - 20
   script:
     ## first install EICD to ensure the latest version, then build juggler
     - |
       git clone https://eicweb.phy.anl.gov/eic/eicd.git /tmp/eicd
       cd /tmp/eicd && git checkout $JUGGLER_EICD_VERSION && cd -
-      cmake -B /tmp/build -S /tmp/eicd -DCMAKE_INSTALL_PREFIX=/usr/local
+      cmake -B /tmp/build -S /tmp/eicd -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD} -DCMAKE_INSTALL_PREFIX=/usr/local
       cmake --build /tmp/build -j40 -- install
       rm -rf /tmp/build /tmp/eicd
     - |
