--- a/JugReco/CMakeLists.txt
+++ b/JugReco/CMakeLists.txt
@@ -5,34 +5,10 @@
 # Package: JugReco
 ################################################################################
 
-file(GLOB JugRecoPlugins_sources src/components/*.cpp)
+file(GLOB JugRecoPlugins_sources CONFIGURE_DEPENDS src/components/*.cpp)
 gaudi_add_module(JugRecoPlugins
   SOURCES
-  src/components/FarForwardParticles.cpp
-  src/components/FarForwardParticlesOMD.cpp
-  src/components/TrackingHitsCollector.cpp 
-  src/components/TrackingHitsCollector2.cpp 
-  src/components/TrackerHitReconstruction.cpp 
-  src/components/SimpleClustering.cpp 
-  src/components/CalorimeterHitReco.cpp 
-  src/components/CalorimeterHitsEtaPhiProjector.cpp 
-  src/components/CalorimeterHitsMerger.cpp 
-  src/components/CalorimeterIslandCluster.cpp 
-  src/components/EnergyPositionClusterMerger.cpp
-  src/components/ClusterRecoCoG.cpp 
-  src/components/ParticleCollector.cpp
-  src/components/ImagingPixelReco.cpp 
-  src/components/ImagingPixelMerger.cpp 
-  src/components/ImagingPixelDataCombiner.cpp 
-  src/components/ImagingPixelDataSorter.cpp 
-  src/components/ImagingTopoCluster.cpp 
-  src/components/ImagingClusterReco.cpp 
-  src/components/InclusiveKinematicsElectron.cpp
-  src/components/InclusiveKinematicsDA.cpp
-  src/components/InclusiveKinematicsJB.cpp
-  src/components/InclusiveKinematicsSigma.cpp
-  src/components/InclusiveKinematicseSigma.cpp
-  src/components/PhotoMultiplierReco.cpp
+  ${JugRecoPlugins_sources}
   LINK
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
   JugBase
