--- a/JugTrack/CMakeLists.txt
+++ b/JugTrack/CMakeLists.txt
@@ -5,30 +5,10 @@
 # Package: JugTrack
 ################################################################################
 
-file(GLOB JugTrackPlugins_sources src/components/*.cpp)
+file(GLOB JugTrackPlugins_sources CONFIGURE_DEPENDS src/components/*.cpp)
 gaudi_add_module(JugTrackPlugins
   SOURCES
-  src/components/ConformalXYPeakProtoTracks.cpp
-  src/components/FinderAlgoTemplate.cpp 
-  src/components/ProtoTrackMatching.cpp 
-  src/components/GenFitTrackFitter.cpp 
-  src/components/SingleTrackSourceLinker.cpp 
-  src/components/TrackerSourceLinker.cpp 
-  src/components/CKFTracking.cpp 
-  src/components/CKFTrackingFunction.cpp 
-  src/components/TrackFindingAlgorithm.cpp 
-  src/components/TrackFindingAlgorithmFunction.cpp 
-  src/components/TrackFittingAlgorithm.cpp 
-  src/components/TrackFittingFunction.cpp 
-  src/components/TestACTSLogger.cpp 
-  src/components/TrackParamTruthInit.cpp 
-  src/components/TrackParamClusterInit.cpp 
-  src/components/TrackParamVertexClusterInit.cpp 
-  src/components/TrackParamImagingClusterInit.cpp 
-  src/components/ParticlesFromTrackFit.cpp 
-  #src/components/TrajectoryFromTrackFit.cpp 
-  src/components/TruthTrackSeeding.cpp 
-  src/components/TrackParamACTSSeeding.cpp 
+  ${JugTrackPlugins_sources}
   LINK
   Gaudi::GaudiAlgLib Gaudi::GaudiKernel
   JugBase
@@ -40,8 +20,6 @@ gaudi_add_module(JugTrackPlugins
   ${genfit2}
 )
 
-
-
 target_include_directories(JugTrackPlugins PUBLIC
   $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/JugBase>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
@@ -50,9 +28,3 @@ target_include_directories(JugTrackPlugins PUBLIC
 )
 
 target_compile_options(JugTrackPlugins PRIVATE -Wno-suggest-override)
-
-
-#gaudi_add_test(loggerTest
-#               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-#               FRAMEWORK tests/options/testLogger.py
-#               )
