--- a/.github/workflows/linux-eic-shell.yml
+++ b/.github/workflows/linux-eic-shell.yml
@@ -24,6 +24,7 @@ jobs:
 
   clang-tidy:
     runs-on: ubuntu-latest
+    needs: build-test
     steps:
     - uses: actions/checkout@v2
     - uses: cvmfs-contrib/github-action-cvmfs@v2
