fix: login to GitHub registry

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -155,6 +155,10 @@ juggler:default:
         ./eic_container/gitlab-ci/docker_login.sh                                       \
             -u $DH_REGISTRY_USER -p $DH_EICWEB_TOKEN                                         \
             -n $DOCKER_NTRIES -t $DOCKER_WAIT_TIME
+        ./eic_container/gitlab-ci/docker_login.sh
+            -u ${GITHUB_REGISTRY_USER} -p ${GITHUB_REGISTRY_TOKEN}
+            -n ${DOCKER_NTRIES} -t ${DOCKER_WAIT_TIME}
+            ${GH_
         ./eic_container/gitlab-ci/docker_push.sh -i ${BUILD_IMAGE} -l ${INTERNAL_TAG}   \
                                                  -n $DOCKER_NTRIES -t $DOCKER_WAIT_TIME \
                                                  ${DEFAULT_TAG}
