feat: find_package algorithms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,15 @@ find_package(Microsoft.GSL CONFIG)
 find_package(EICD REQUIRED)
 find_package(EDM4HEP 0.4.1 REQUIRED)
 
+find_package(algorithms)
+if(${algorithms_FOUND})
+  message(STATUS "algorithms library found")
+  add_definitions("-DUSE_ALGORITHMS")
+  set(algorithms "algorithms::JugDigiPlugins")
+else()
+  message(STATUS "algorithms library not found.")
+endif()
+
 find_package(podio 0.14.1 REQUIRED)
 add_definitions("-Dpodio_VERSION_MAJOR=${podio_VERSION_MAJOR}")
 add_definitions("-Dpodio_VERSION_MINOR=${podio_VERSION_MINOR}")
