fix: JugDigi: link against algorithms

--- a/JugDigi/CMakeLists.txt
+++ b/JugDigi/CMakeLists.txt
@@ -15,6 +15,7 @@ gaudi_add_module(JugDigiPlugins
   ROOT::Core ROOT::RIO ROOT::Tree
   EDM4HEP::edm4hep
   EICD::eicd
+  ${algorithms}
 )
 
 target_include_directories(JugDigiPlugins PUBLIC
