chore: rename `eicd` -> `EDM4hep`
```bash
find . -name "*" -type f -print | grep -vE '\.git\/' | xargs sed -i 's/\<eicd\>/edm4eic/g'
find . -name "*" -type f -print | grep -vE '\.git\/' | xargs sed -i 's/\<EICD\>/EDM4EIC/g'
```

Edge cases:
- did not change `eicd` in the Dependencies in `README.md`
- changed `edm4eic` to `EDM4eic` in `.gitlab-ci.yml`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ endif()
 
 find_package(Microsoft.GSL CONFIG)
 
-find_package(EICD REQUIRED)
+find_package(EDM4EIC REQUIRED)
 find_package(EDM4HEP 0.4.1 REQUIRED)
 
 find_package(podio 0.14.1 REQUIRED)
