--- a/JugTrack/CMakeLists.txt
+++ b/JugTrack/CMakeLists.txt
@@ -14,7 +14,7 @@ gaudi_add_module(JugTrackPlugins
   JugBase
   ROOT::Core ROOT::RIO ROOT::Tree
   EDM4HEP::edm4hep
-  EICD::eicd
+  EDM4EIC::edm4eic
   DD4hep::DDRec
   ActsCore
   ${genfit2}
