--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ variables:
   ## to keep the container functionally identical to jug_xl:nightly
   JUGGLER_NPDET_VERSION: "master"
   JUGGLER_EICD_VERSION: "master"
-  JUGGLER_EICD_REPOSITORYURL: "https://github.com/eic/eicd.git"
+  JUGGLER_EICD_REPOSITORYURL: "https://github.com/eic/EDM4eic.git"
 
   ## We have:
   ##   - Juggler triggers eic_container on a master pipeline
@@ -76,13 +76,13 @@ juggler:local:
     - CMAKE_CXX_STANDARD:
       - 17
   script:
-    ## first install EICD to ensure the latest version, then build juggler
+    ## first install EDM4EIC to ensure the latest version, then build juggler
     - |
-      git clone ${JUGGLER_EICD_REPOSITORYURL} /tmp/eicd
-      cd /tmp/eicd && git checkout ${JUGGLER_EICD_VERSION} && cd -
-      cmake -B /tmp/build -S /tmp/eicd -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD} -DCMAKE_INSTALL_PREFIX=/usr/local
+      git clone ${JUGGLER_EICD_REPOSITORYURL} /tmp/EDM4eic
+      cd /tmp/EDM4eic && git checkout ${JUGGLER_EICD_VERSION} && cd -
+      cmake -B /tmp/build -S /tmp/EDM4eic -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD} -DCMAKE_INSTALL_PREFIX=/usr/local
       cmake --build /tmp/build -j40 -- install
-      rm -rf /tmp/build /tmp/eicd
+      rm -rf /tmp/build /tmp/EDM4eic
     - |
       cmake -Bbuild -S. -DCMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD} -DCMAKE_INSTALL_PREFIX=/usr/local
       cmake --build build -j20
