Added simple cmake build to algorithms

--- a/external/algorithms/CMakeLists.txt
+++ b/external/algorithms/CMakeLists.txt
@@ -1,12 +1,12 @@
 # SPDX-License-Identifier: LGPL-3.0-or-later
-# Copyright (C) 2022 Wouter Deconinck, Whitney Armstrong
+# Copyright (C) 2022 Whitney Armstrong, Wouter Deconinck, Sylvester Joosten
 
 cmake_minimum_required(VERSION 3.19)
 
 # CMP0074: find_package() uses <PackageName>_ROOT variables
 cmake_policy(SET CMP0074 NEW)
 
-project(Juggler VERSION 4.3.0)
+project(algorithms VERSION 1.0.0)
 
 set(CMAKE_CXX_STANDARD 17 CACHE STRING "")
 if(NOT CMAKE_CXX_STANDARD MATCHES "17|20")
@@ -33,7 +33,7 @@ endif()
 # Set default build type
 set(default_build_type "Release")
 if(EXISTS "${CMAKE_SOURCE_DIR}/.git")
-  set(default_build_type "Debug")
+  set(default_build_type "RelWithDebInfo")
 endif()
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
   message(STATUS "Setting build type to '${default_build_type}' as none was specified.")
@@ -53,37 +53,8 @@ find_package(Microsoft.GSL CONFIG)
 
 find_package(EDM4EIC REQUIRED)
 find_package(EDM4HEP 0.4.1 REQUIRED)
+#find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
+find_package(DD4hep COMPONENTS DDRec REQUIRED)
+find_package(fmt REQUIRED)
 
-find_package(podio 0.14.1 REQUIRED)
-add_definitions("-Dpodio_VERSION_MAJOR=${podio_VERSION_MAJOR}")
-add_definitions("-Dpodio_VERSION_MINOR=${podio_VERSION_MINOR}")
-add_definitions("-Dpodio_VERSION_PATCH=${podio_VERSION_PATCH}")
-
-find_package(ROOT COMPONENTS Core RIO Tree MathCore GenVector Geom REQUIRED)
-find_package(DD4hep COMPONENTS DDG4 DDG4IO DDRec REQUIRED)
-
-find_package(Acts REQUIRED COMPONENTS Core PluginIdentification PluginTGeo PluginDD4hep PluginJson)
-set(Acts_VERSION_MIN "19.0.0")
-set(Acts_VERSION "${Acts_VERSION_MAJOR}.${Acts_VERSION_MINOR}.${Acts_VERSION_PATCH}")
-if(${Acts_VERSION} VERSION_LESS ${Acts_VERSION_MIN}
-   AND NOT "${Acts_VERSION}" STREQUAL "9.9.9")
-  message(FATAL_ERROR "Acts version ${Acts_VERSION_MIN} or higher required, but ${Acts_VERSION} found")
-endif()
-add_definitions("-DActs_VERSION_MAJOR=${Acts_VERSION_MAJOR}")
-add_definitions("-DActs_VERSION_MINOR=${Acts_VERSION_MINOR}")
-add_definitions("-DActs_VERSION_PATCH=${Acts_VERSION_PATCH}")
-
-find_package(Gaudi)
-add_subdirectory(JugBase)
-add_subdirectory(JugDigi)
-add_subdirectory(JugFast)
-add_subdirectory(JugPID)
-add_subdirectory(JugReco)
-add_subdirectory(JugTrack)
-gaudi_install(CMAKE)
-
-add_subdirectory(external/algorithms)
-
-# create and install Juggler.xenv file as it still has a use-case
-# TODO: update workflow to not need xenv files anymore
-include(cmake/xenv.cmake)
+add_subdirectory(core)
