--- a/external/algorithms/core/CMakeLists.txt
+++ b/external/algorithms/core/CMakeLists.txt
@@ -11,14 +11,17 @@ set(TARGETS ${TARGETS} ${LIBRARY} PARENT_SCOPE)
 
 file(GLOB SRC CONFIGURE_DEPENDS src/*.cpp)
 
-include_directories("${PROJECT_SOURCE_DIR}/${SUBDIR}/include")
-
 add_library(${LIBRARY} SHARED ${SRC})
 target_link_libraries(${LIBRARY} 
-  EDM4HEP::edm4hep
-  EDM4EIC::edm4eic
-  DD4hep::DDRec
-  fmt::fmt)
+  PUBLIC
+    EDM4HEP::edm4hep
+    EDM4EIC::edm4eic
+    DD4hep::DDRec
+    fmt::fmt)
+target_include_directories(${LIBRARY}
+  PUBLIC 
+  $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/${SUBDIR}/include>
+  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 set_target_properties(${LIBRARY} PROPERTIES
   VERSION ${PROJECT_VERSION}
   SOVERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR})
@@ -27,10 +30,11 @@ install(TARGETS ${LIBRARY}
   EXPORT algorithmsTargets
   RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT bin
   LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT shlib
-  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT lib)
+  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT lib
+  INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
 
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/${SUBDIR}/include/algorithms
-  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT dev)
+DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT dev)
 
 # TODO: Testing
 #if(BUILD_TESTING)
