--- a/external/algorithms/core/CMakeLists.txt
+++ b/external/algorithms/core/CMakeLists.txt
@@ -31,7 +31,8 @@ install(TARGETS ${LIBRARY}
   RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT bin
   LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT shlib
   ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT lib
-  INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+  INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+  NAMESPACE algorithms::)
 
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/${SUBDIR}/include/algorithms
 DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT dev)
