Disable SRC globbing for now, while converting algorithms

--- a/external/algorithms/calorimetry/CMakeLists.txt
+++ b/external/algorithms/calorimetry/CMakeLists.txt
@@ -9,10 +9,14 @@ set(SUBDIR "calorimetry")
 set(LIBRARY "algo${SUBDIR}")
 set(TARGETS ${TARGETS} ${LIBRARY} PARENT_SCOPE)
 
-file(GLOB SRC CONFIGURE_DEPENDS src/*.cpp)
+# FIXME: adding one by one
+#file(GLOB SRC CONFIGURE_DEPENDS src/*.cpp)
+set(SRC
+  src/ClusterRecoCoG.cpp
+)
 
 add_library(${LIBRARY} SHARED ${SRC})
-target_link_libraries(${LIBRARY} 
+target_link_libraries(${LIBRARY}
   PUBLIC
     EDM4HEP::edm4hep
     EDM4EIC::edm4eic
@@ -20,7 +24,7 @@ target_link_libraries(${LIBRARY}
     algocore
     fmt::fmt)
 target_include_directories(${LIBRARY}
-  PUBLIC 
+  PUBLIC
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/${SUBDIR}/include>
   $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
 set_target_properties(${LIBRARY} PROPERTIES
