ci: update to run on commits to main

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: eicweb.phy.anl.gov:4567/containers/image_recipes/ubuntu_dind:latest
 
 variables:
   ## Base eic_dev image is testing. This puts the container at the same level as
-  ## the nightly release. For now we tag the master as:
+  ## the nightly release. For now we tag the main as:
   ##  - juggler:testing (for CI usage)
   ##  - We also trigger the eic_container master to rebuild the jug_xl nightly
   EIC_DEV_TAG: "testing"
@@ -16,7 +16,7 @@ variables:
   JUGGLER_EDM4EIC_REPOSITORYURL: "https://github.com/eic/EDM4eic.git"
 
   ## We have:
-  ##   - Juggler triggers eic_container on a master pipeline
+  ##   - Juggler triggers eic_container on a main pipeline
   ##   - eic_container triggers juggler on nightly builds
   ## this way jug_xl:nightly and juggler:testing are kept in sync
 
@@ -49,23 +49,23 @@ stages:
   - finalize
 
 workflow:
-  ## Only rebuild on MRs and on commits to the master, as in other cases
+  ## Only rebuild on MRs and on commits to the main, as in other cases
   ## we should use the tagged jug_xl releases from eic_container.
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-    - if: '$CI_COMMIT_BRANCH == "master"'
+    - if: '$CI_COMMIT_BRANCH == "main"'
 
 default:
 
 ## plan:
 ##  Workflows:
-##  - master      --> config + docker (eic_container) + singularity (this repo)
+##  - main        --> config + docker (eic_container) + singularity (this repo)
 ##      --> trigger eic_container master
 ##  - MR          --> config + docker (eic_container) + singularity (this repo)
-##  - upstream trigger from eic_container (nightly) --> run master
+##  - upstream trigger from eic_container (nightly) --> run main
 ##
 ##  Container images tags
-##  - master      --> nightly on eicweb & DH, and export to eic_container
+##  - main        --> nightly on eicweb & DH, and export to eic_container
 ##  - MR          --> unstable-mr-XXX (on eicweb only, untag at end of pipeline)
 
 juggler:local:
@@ -153,7 +153,7 @@ juggler:default:
                    --build-arg JUG_VERSION=juggler-${INTERNAL_TAG}-$(date +%Y-%m-%d_%H-%M-%S)-$(git rev-parse HEAD)
                    eic_container/containers/jug
     - |
-      if [ "$CI_COMMIT_BRANCH" == "master" ]; then
+      if [ "$CI_COMMIT_BRANCH" == "main" ]; then
         ./eic_container/gitlab-ci/docker_login.sh                                       \
             -u $DH_REGISTRY_USER -p $DH_EICWEB_TOKEN                                         \
             -n $DOCKER_NTRIES -t $DOCKER_WAIT_TIME
@@ -192,7 +192,7 @@ juggler:default:
 jug_xl:master:
   stage: deploy
   rules:
-    - if: '$CI_COMMIT_BRANCH == "master" && $TRIGGERED_BY_NIGHTLY == "0" && $CI_SERVER_HOST == "eicweb.phy.anl.gov"'
+    - if: '$CI_COMMIT_BRANCH == "main" && $TRIGGERED_BY_NIGHTLY == "0" && $CI_SERVER_HOST == "eicweb.phy.anl.gov"'
       when: on_success
     - when: never
   needs:
@@ -237,7 +237,7 @@ pages:
   image: eicweb.phy.anl.gov:4567/containers/eic_container/alpine
   stage: deploy
   rules:
-    - if: '$CI_SERVER_HOST == "gitlab.phy.anl.gov" && $CI_COMMIT_BRANCH == "master"' 
+    - if: '$CI_SERVER_HOST == "gitlab.phy.anl.gov" && $CI_COMMIT_BRANCH == "main"' 
   script:
     - apk update && apk add doxygen  graphviz ttf-ubuntu-font-family
     - cd doc && doxygen Doxyfile  && cd ..
